--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tannin-app-client",
-  "homepage": "https://tanninwineclient.herokuapp.com/",
+  "homepage": "https://88dennis.github.io/tannin-app-client/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
