--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tannin-app-client",
+  "name": "tannin",
   "homepage": "https://88dennis.github.io/tannin-app-client/",
   "version": "0.1.0",
   "private": true,
@@ -9,7 +9,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -19,16 +19,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
