--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tannin",
-  "homepage": "https://88dennis.github.io/tannin-app-client/",
+  "homepage": "https://tanninwineapp.herokuapp.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
