--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.5.0",
     "gh-pages": "^2.0.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.27.0",
+    "popper.js": "^1.16.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1"
   },
